# pyconde-talks

./: .cspell.json  .dockerignore  .gitignore  .mdformat.toml  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  django-vars.env  env.example  manage.py  pyproject.toml  renovate.json5  sonar-project.properties  zensical.toml
.claude/: settings.local.json
.claude/agents/: security-reviewer.md
.cspell/: custom-dictionary.txt
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/instructions/: sonarqube_mcp.instructions.md
.github/workflows/: checks.yml  ci.yml  codeql.yml  deploy.yml  digestabot.yml  docs.yml
assets/css/: input.css
docker/: .env  Dockerfile  backup_db.sh  compose.local.yaml  compose.yaml  docker-bake.hcl  docker-entrypoint.sh  ensure_permissions.sh
docker/deploy/: deploy-event.sh
docs/: architecture.md  contributing.md  deployment-ci.md  development.md  index.md  license.md  pretalx-sync.md  story.md
docs/architecture/: data-model.md  frontend.md  index.md  integrations.md
docs/deployment/: ci-cd.md  index.md  nginx.md  operations.md
docs/development/: code-quality.md  docker-local.md  documentation.md  index.md  testing.md  translations.md
docs/features/: questions.md  ratings.md  schedule.md  social-cards.md  streaming.md  talks.md
docs/getting-started/: authentication.md  configuration.md  index.md
docs/reference/: management-commands.md  pretalx-sync.md
event_talks/: __init__.py  asgi.py  context_processors.py  settings.py  urls.py  wsgi.py
event_talks/tests/: test_context_processors.py  test_settings.py  test_urls.py
events/: admin.py  apps.py  models.py  session.py
events/migrations/: 0001_initial.py  0002_event_code_of_conduct_url_event_imprint_url_and_more.py  0003_event_show_rating_summary.py  0004_event_transcriptions_url.py
events/tests/: test_admin.py  test_models.py  test_session.py
helpers/: generate_fake_talks.py  start.sh
logs/: django.log.2025-07-21  django.log.2025-07-22  django.log.2025-07-23  django.log.2025-07-24  error.log.2025-07-21  error.log.2025-07-22  error.log.2025-07-23
nginx/: talks.example.com  talks.pycon.de
pyconde_talks/: asgi.py  settings.py  urls.py  wsgi.py
scripts/: dev-setup.sh
static/js/: question-voting.js
talks/: __init__.py  admin.py  admin_pretalx.py  admin_qa.py  admin_rating.py  apps.py  grid_utils.py  models.py  models_pretalx.py  models_qa.py  models_rating.py  room_backfill.py  talk_backfill.py  tests.py  types.py  urls.py  utils.py  validators.py  views.py  views_chair.py  views_qa.py  views_rating.py  views_saved.py  views_schedule.py
talks/migrations/: 0001_initial.py  0002_alter_streaming_video_link_alter_talk_video_link.py  0003_alter_talk_video_link.py  0003_alter_talk_video_start_time.py  0004_question_questionvote_answer.py  0005_rename_talks_answe_questio_77795a_idx_talks_answe_questio_7b1874_idx_and_more.py  0006_alter_question_is_anonymous.py  0007_remove_is_anonymous.py  0008_remove_question_author_email_and_more.py  0009_alter_question_status.py  0010_alter_question_status.py  0010_alter_talk_image_alter_talk_presentation_type.py  0011_alter_question_status.py  0011_alter_questionvote_unique_together_and_more.py  0012_rating.py  0012_talk_talks_talk_room_id_73a62a_idx_and_more.py  0013_merge_20251104_2313.py  0013_rating.py  0014_talk_event_alter_talk_image_and_more.py  0015_alter_rating_comment.py  0016_add_saved_talk.py  0017_alter_speaker_options_alter_speaker_pretalx_id_and_more.py  0018_remove_questionvote_talks_quest_questio_99a23f_idx.py  0019_talk_transcription_url.py  0020_add_transcription_url_to_streaming.py  0021_alter_talk_presentation_type.py  0022_talk_end_time_generated.py  0022_talk_session_chair.py  0023_pendingpretalxchange.py  0024_room_event_pretalx_id.py  0025_backfill_room_event.py  0026_room_event_scoped_constraints.py  0027_room_event_required.py  0028_backfill_talk_event.py  0029_talk_event_required.py  0030_talk_session_chair.py  0031_remove_rating_talks_ratin_talk_id_45e57b_idx_and_more.py  0032_alter_answer_content_alter_question_content.py
talks/templatetags/: highlight.py  rating_tags.py  saved_tags.py  schedule_tags.py  stat_tags.py  svg_tags.py  time_filters.py
talks/tests/: _pretalx_factory.py  test_admin.py  test_admin_pretalx.py  test_avatars.py  test_chair.py  test_generate_fake_talks.py  test_images.py  test_import_livestream_clean.py  test_import_livestream_urls.py  test_import_livestream_urls_command.py  test_import_pretalx_command.py  test_import_pretalx_integration.py  test_management_events.py  test_models.py  test_models_comprehensive.py  test_models_pretalx.py  test_models_qa_comprehensive.py  test_pretalx_apply.py  test_pretalx_client.py  test_pretalx_digest.py  test_pretalx_helpers.py  test_pretalx_models.py  test_rating.py  test_room_backfill.py  test_saved_talks.py  test_schedule.py  test_talk_backfill.py  test_templatetags.py  test_update_video_links.py  test_update_video_links_command.py  test_utils.py  test_validators.py  test_views_comprehensive.py  test_views_events.py  test_views_qa.py  test_views_qa_comprehensive.py  test_views_search.py
templates/: 404.html  500.html  base.html  home.html
templates/account/: confirm_login_code.html  logout.html  request_login_code.html
templates/partials/: alert_error.html  event_selector.html  language_selector.html  useful_link_card.html
templates/socialaccount/: connections.html
templates/talks/: chair_grid.html  schedule.html  talk_detail.html  talk_list.html
templates/users/: add_email.html  confirm_add_email.html  delete_account.html  profile.html
users/: adapters.py  adapters_social.py  admin.py  apps.py  forms.py  middleware.py  models.py  signals.py  tests.py  urls.py  utils.py  validators.py  views.py  views_connections.py
users/migrations/: 0001_initial.py  0002_customuser_display_name.py  0003_alter_customuser_date_joined.py  0004_customuser_events.py  0005_ticket.py  0006_alter_customuser_display_name.py  0007_customuser_preferred_language.py  (+1 more)
utils/: email_utils.py  test_perf.py  url.py
(+75 files in other folders)
