[project]
name = "pyconde-talks"
version = "0.1.0"
description = "Website for conference talks"
readme = "README.md"
requires-python = ">=3.14,<4"
authors = [{ name = "Julio Batista Silva", email = "python@juliobs.com" }]
license = "MIT"
keywords = [
    "conference",
    "django",
    "event",
    "pycon",
    "pyconde",
    "pydata",
    "speaker",
    "talks",
    "videos",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Django :: 6",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Education",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Multimedia :: Video",
]
dependencies = [
    "argon2-cffi>=25.1.0",
    "daphne>=4.2.1",
    "django-allauth[socialaccount]>=65.14.1",
    "django-anymail[mailgun]>=14.0",
    "django-environ>=0.12.0",
    "django-health-check>=3.23.5",
    "django-htmx>=1.27.0",
    "django-markdownify>=0.9.6",
    "django-structlog>=10.0.0",
    "django-stubs-ext>=5.2.9",
    "django-template-partials>=25.3",
    "django>=6.0.2",
    "emoji>=1.7,<2",
    "furl>=2.1.4",
    "model-bakery>=1.23.2",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3,<3",
    "pillow>=12.1.0",
    "pilmoji>=2.0.5",
    "pytanis>=0.9.6",
    "requests>=2.32.5",
    "structlog>=25.5.0",
    "tenacity>=9.1.4",
]

[dependency-groups]
dev = [
    "bandit>=1.9.3",
    "django-stubs[compatible-mypy]>=5.2.9",
    "djlint>=1.36.4",
    "faker>=40.4.0",
    "ipython>=9.10.0",
    "mypy>=1.19.1",
    "pandas-stubs>=2.3.3.260113,<3",
    "prek>=0.3.3",
    "psycopg2-binary>=2.9.11",
    "ruff>=0.15.0",
    "types-requests>=2.32.4.20260107",
    "zuban>=0.5.1",
]
test = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-django>=4.11.1",
    "pytest-mock>=3.15.1",
    "pytest-random-order>=1.2.0",
    "responses>=0.25.8",
]
prod = [
    "psycopg2>=2.9.11",
]

[project.urls]
Homepage = "https://github.com/PioneersHub/pyconde-talks"
Documentation = "https://github.com/PioneersHub/pyconde-talks#readme"
Repository = "https://github.com/PioneersHub/pyconde-talks"
CI = "https://github.com/PioneersHub/pyconde-talks/actions"
Issues = "https://github.com/PioneersHub/pyconde-talks/issues"

[tool.mypy]
python_version = "3.14"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
plugins = ["mypy_django_plugin.main"]

[tool.zuban]
strict = true
disallow_untyped_defs = true
warn_unreachable = true
python_executable = ".venv/bin/python"

[tool.django-stubs]
django_settings_module = "event_talks.settings"

[tool.djlint]
profile = "django"
indent = 2
line_length = 100
ignore = "H014,H021"

[tool.ruff]
line-length = 100
indent-width = 4
target-version = "py314"
extend-exclude = ["migrations"]
fix = true
unsafe-fixes = false

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = true

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D203",   # one-blank-line-before-class
    "D212",   # multi-line-summary-first-line
    "ANN401", # Allow Any type annotations in certain cases
]

[tool.ruff.lint.per-file-ignores]
"**/tests/{test_*.py,conftest.py}" = [
    "S101",   # Allow assert in tests
    "S106",   # Allow hardcoded password in tests
    "ARG001", # Allow unused arguments in tests (for pytest fixtures)
]
"**/__init__.py" = [
    "D104", # Allow empty __init__.py files
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.ruff.lint.isort]
combine-as-imports = true
force-wrap-aliases = true
lines-after-imports = 2

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "event_talks.settings"
python_files = ["test_*.py"]
addopts = [
    "-ra",
    "--durations=10",
    "--import-mode=importlib",
    "--random-order",
    "--tb=short",
    "--cov=.",
    "--cov-report=term",
    "--cov-report=lcov:lcov.info",
    "--verbose",
]

[tool.coverage.run]
omit = [
    "manage.py",
    "event_talks/asgi.py",
    "event_talks/wsgi.py",
    "event_talks/settings.py",
    "*/migrations/*",
]

[tool.bandit]
exclude_dirs = [".git", ".venv", "__pycache__", "generate_fake_talks.py", "migrations", "tests"]

[tool.bandit.assert_used]
skips = ['*_test.py', '*/test_*.py']

[tool.uv.sources]
pytanis = { git = "https://github.com/jbsilva/pytanis" }
