[project]
name = "pyconde-talks"
version = "0.1.0"
description = "Website for conference talks"
readme = "README.md"
requires-python = ">=3.14,<4"
authors = [{ name = "Julio Batista Silva", email = "python@juliobs.com" }]
license = "MIT"
keywords = [
    "conference",
    "django",
    "event",
    "pycon",
    "pyconde",
    "pydata",
    "speaker",
    "talks",
    "videos",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Django :: 6",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Education",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Multimedia :: Video",
]
dependencies = [
    "argon2-cffi>=25.1.0",
    "daphne>=4.2.2",
    "django-allauth[socialaccount]>=65.18.0",
    "django-anymail[mailgun]>=15.0",
    "django-environ>=0.13.0",
    "django-health-check[psutil]>=4.4.2",
    "django-htmx>=1.27.0",
    "django-markdownify>=0.9.7",
    "django-structlog>=10.1.0",
    "django-stubs-ext>=6.0.5",
    "django>=6.0.6",
    "emoji>=1.7",
    "furl>=2.1.4",
    "httpx2>=2.3.0",
    "matplotlib>=3.10.9",
    "model-bakery>=1.23.4",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3,<3",
    "pillow>=12.2.0",
    "pilmoji>=2.0.5",
    "pytanis>=0.10",
    "sentry-sdk[django]>=2.61.1",
    "structlog>=26.1.0",
    "tenacity>=9.1.4",
]

[dependency-groups]
dev = [
    "bandit[sarif]>=1.9.4",
    "django-stubs[compatible-mypy]>=6.0.5",
    "djlint>=1.39.0",
    "faker>=40.21.0",
    "ipython>=9.14.1",
    "mypy>=2.1.0",
    "pandas-stubs>=2.3.3.260113,<3",
    "prek>=0.4.4",
    "ruff>=0.15.16",
    "zuban>=0.8.0",
]
test = [
    "hypothesis>=6.155.2",
    "inline-snapshot>=0.34.1",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-django>=4.12.0",
    "pytest-httpx2>=1.0.0",
    "pytest-mock>=3.15.1",
    "pytest-random-order>=1.2.0",
]
prod = [
    # psycopg3 (a.k.a. `psycopg`) is the actively-maintained successor to psycopg2.
    # ``[binary]`` ships its own libpq wheel so the Docker image does not need libpq-dev.
    # Add the ``pool`` extra to enable Django's native connection pool (`DJANGO_DB_POOL=True`).
    "psycopg[binary]>=3.3.4",
]

[project.urls]
Homepage = "https://github.com/PioneersHub/pyconde-talks"
Documentation = "https://github.com/PioneersHub/pyconde-talks#readme"
Repository = "https://github.com/PioneersHub/pyconde-talks"
CI = "https://github.com/PioneersHub/pyconde-talks/actions"
Issues = "https://github.com/PioneersHub/pyconde-talks/issues"

[tool.uv]
exclude-newer = "1 day"
exclude-newer-package = { ruff = "12 hours", zuban = "12 hours" }

[tool.uv.sources]
pytanis = { git = "https://github.com/jbsilva/pytanis" }

[tool.mypy]
python_version = "3.14"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
plugins = ["mypy_django_plugin.main"]

[tool.zuban]
strict = true
disallow_untyped_defs = true
warn_unreachable = true
python_executable = ".venv/bin/python"

[tool.django-stubs]
django_settings_module = "event_talks.settings"

[tool.djlint]
profile = "django"
indent = 2
line_length = 100
ignore = "H014,H021"

[tool.ruff]
line-length = 100
indent-width = 4
target-version = "py314"
extend-exclude = ["migrations"]
fix = true
unsafe-fixes = false

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = true

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D203",   # one-blank-line-before-class
    "D212",   # multi-line-summary-first-line
    "ANN401", # Allow Any type annotations in certain cases
    "COM812", # Conflicts with the formatter
]

[tool.ruff.lint.per-file-ignores]
"**/tests/{test_*.py,conftest.py}" = [
    "ARG001",  # Allow unused arguments in tests (for pytest fixtures)
    "ARG002",  # Allow unused method arguments in tests (for pytest fixtures)
    "PLR0913", # Allow many arguments in test helpers
    "S101",    # Allow assert in tests
    "S105",    # Allow hardcoded password in strings tests
    "S106",    # Allow hardcoded password in function calls in tests
    "S107",    # Allow hardcoded default password in tests
    "SLF001",  # Allow private member access in tests
]
"**/__init__.py" = [
    "D104", # Allow empty __init__.py files
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.ruff.lint.isort]
combine-as-imports = true
force-wrap-aliases = true
lines-after-imports = 2

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "event_talks.settings"
python_files = ["test_*.py"]
addopts = [
    "-ra",
    "--durations=10",
    "--import-mode=importlib",
    "--random-order",
    "--tb=short",
    "--cov=.",
    "--cov-report=term",
    "--cov-report=lcov:reports/lcov.info",
    "--cov-report=xml:reports/coverage.xml",
    "--verbose",
]

[tool.coverage.run]
omit = [
    "manage.py",
    "event_talks/asgi.py",
    "event_talks/wsgi.py",
    "event_talks/settings.py",
    "*/migrations/*",
    # Live integration tests - module-level `pytest.skip` when RUN_LIVE_IMPORT_TEST is unset
    # leaves their bodies permanently uncovered.
    "talks/tests/test_import_livestream_urls.py",
    "talks/tests/test_import_pretalx_integration.py",
    "talks/tests/test_update_video_links.py",
]

[tool.bandit]
exclude_dirs = [
    ".git",
    ".venv",
    "__pycache__",
    "_fake_talks",
    "generate_fake_talks.py",
    "migrations",
    "tests",
]

[tool.bandit.assert_used]
skips = ['*_test.py', '*/test_*.py']
